--- a/tests/examples/source/devfiles/nodejs/devfile-with-parent.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-parent.yaml
@@ -3,10 +3,10 @@ metadata:
   name: nodejs
   version: 1.0.0
 parent:
-  uri: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/devfile.yaml
+  uri: https://raw.githubusercontent.com/kadel/registry/move-merge-key/devfiles/nodejs/devfile.yaml
 commands:
-  - exec:
-      id: devBuild
+  - id: devBuild
+    exec:
       component: runtime
       commandLine: touch blah.js
       workingDir: ${PROJECTS_ROOT}
