--- a/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
@@ -7,8 +7,8 @@ starterProjects:
       remotes:
         origin: "https://github.com/che-samples/web-nodejs-sample.git"
 components:
-  - container:
-      name: runtime
+  - name: runtime
+    container:
       image: quay.io/eclipse/che-nodejs10-ubi:nightly
       memoryLimit: 1024Mi
       env:
@@ -21,8 +21,8 @@ components:
       volumeMounts:
         - name: myvol
           path: /data
-  - container:
-      name: runtime2
+  - name: runtime2
+    container:
       image: quay.io/eclipse/che-nodejs10-ubi:nightly
       memoryLimit: 1024Mi
       mountSources: false
@@ -31,22 +31,22 @@ components:
           path: /data
         - name: myvol2
           path: /data2
-  - volume:
-      name: myvol
+  - name: myvol
+    volume:
       size: 3Gi
-  - volume:
-      name: myvol2
+  - name: myvol2
+    volume: {}
 commands:
-  - exec:
-      id: devbuild
+  - id: devbuild
+    exec:
       component: runtime
       commandLine: "echo hello >> myfile.log"
       workingDir: /data
       group:
         kind: build
         isDefault: true
-  - exec:
-      id: devrun
+  - id: devrun
+    exec:
       component: runtime2
       commandLine: "cat myfile.log"
       workingDir: /data
