--- a/tests/examples/source/devfiles/nodejs/devfile-without-devbuild.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-without-devbuild.yaml
@@ -7,8 +7,8 @@ starterProjects:
       remotes:
         origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
-  - container:
-      name: runtime
+  - name: runtime
+    container:
       image: registry.access.redhat.com/ubi8/nodejs-12:1-36
       memoryLimit: 1024Mi
       env:
@@ -19,8 +19,8 @@ components:
           targetPort: 3000
       mountSources: true
 commands:
-  - exec:
-      id: devrun
+  - id: devrun
+    exec:
       component: runtime
       commandLine: "npm install && npm start"
       workingDir: ${PROJECTS_ROOT}
