--- a/tests/examples/source/devfiles/parentSupport/devfile.yaml
+++ b/tests/examples/source/devfiles/parentSupport/devfile.yaml
@@ -8,8 +8,8 @@ projects:
       remotes:
         origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
-  - container:
-      name: runtime
+  - name: runtime
+    container:
       image: registry.access.redhat.com/ubi8/nodejs-12:1-45
       memoryLimit: 1024Mi
       mountSources: true
@@ -23,32 +23,32 @@ components:
         - name: ODO_TEST_ENV_1
           value: ENV_VALUE_1
 commands:
-  - exec:
-      id: install
+  - id: install
+    exec:
       component: runtime
       commandLine: npm install
       workingDir: /project
       group:
         kind: build
         isDefault: true
-  - exec:
-      id: run
+  - id: run
+    exec:
       component: runtime
       commandLine: npm start
       workingDir: /project
       group:
         kind: run
         isDefault: true
-  - exec:
-      id: debug
+  - id: debug
+    exec:
       component: runtime
       commandLine: npm run debug
       workingDir: /project
       group:
         kind: debug
         isDefault: true
-  - exec:
-      id: test
+  - id: test
+    exec:
       component: runtime
       commandLine: npm test
       workingDir: /project
