PreStart Feature PR (#3742)
* prestart commit 1

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* preStart cleanup, unit and integration tests

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* docs for events

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update docs for prestart

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Unit tests for command helper funcs

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update prestart integration test

Signed-off-by: Maysun J Faisal <maysun.j.faisal@ibm.com>

* Update and rebase

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Fix PR for updated rebase

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Update Prestart int tests for PR feedback

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

* Update tests after rebase

Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-valid-events.yaml
@@ -21,6 +21,22 @@ components:
       memoryLimit: 1024Mi
 commands:
   - exec:
+      id: myPreStart
+      commandLine: echo hello test2 >> $PROJECTS_ROOT/test.txt
+      component: tools
+  - exec:
+      id: secondPreStart
+      commandLine: echo hello test >> $PROJECTS_ROOT/test.txt
+      component: runtime
+      workingDir: /
+  - composite:
+      id: preStartComp
+      label: pre start composite
+      commands:
+        - myPreStart
+        - secondPreStart
+      parallel: true
+  - exec:
       id: myPostStart
       commandLine: echo I am a PostStart
       component: tools
@@ -95,6 +111,9 @@ commands:
       group:
         kind: run
 events:
+  preStart:
+    - "myPreStart" 
+    - "preStartComp"
   postStart:
     - "myPostStart" 
     - "secondpoststart"
