--- a/tests/examples/source/devfiles/nodejs/devfile-with-hotReload.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-hotReload.yaml
@@ -3,7 +3,7 @@ metadata:
   name: nodejs
 starterProjects:
   - name: nodejs-starter
-    remote:
+    remotes:
         origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
