--- a/tests/examples/source/devfiles/nodejs/devfile-with-sparseCheckoutDir.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-sparseCheckoutDir.yaml
@@ -5,7 +5,7 @@ starterProjects:
   -
     name: nodejs-starter
     git:
-      remote:
+      remotes:
         origin: "https://github.com/che-samples/web-nodejs-sample.git"
       sparseCheckoutDir: /app/
 components:
