--- a/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volumes.yaml
@@ -4,7 +4,7 @@ metadata:
 starterProjects:
   - name: nodejs-starter
     git:
-      remote:
+      remotes:
         origin: "https://github.com/che-samples/web-nodejs-sample.git"
 components:
   - container:
