--- a/tests/examples/source/devfiles/nodejs/devfileCompositeCommands.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfileCompositeCommands.yaml
@@ -5,7 +5,7 @@ metadata:
 starterProjects:
   - name: nodejs-starter
     git:
-      remote:
+      remotes:
         origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
   - container:
