--- a/tests/examples/source/devfiles/springboot/devfile.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile.yaml
@@ -5,7 +5,7 @@ metadata:
 starterProjects:
   - name: springbootproject
     git:
-      remote:
+      remotes:
         origin: "https://github.com/maysunfaisal/springboot.git"
 components:
   - container:
