--- a/tests/examples/source/devfilesV1/springboot/devfile-init-without-build.yaml
+++ b/tests/examples/source/devfilesV1/springboot/devfile-init-without-build.yaml
@@ -6,7 +6,7 @@ projects:
   - name: springbootproject
     source:
       type: git
-      remote:
+      remotes:
         origin: "https://github.com/maysunfaisal/springboot.git"
 components:
   - type: chePlugin
