--- a/tests/examples/source/devfiles/nodejs/devfile-with-parent.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-parent.yaml
@@ -5,8 +5,8 @@ metadata:
 parent:
   uri: https://raw.githubusercontent.com/odo-devfiles/registry/master/devfiles/nodejs/devfile.yaml
 commands:
-  - exec:
-      id: devBuild
+  - id: devBuild
+    exec:
       component: runtime
       commandLine: touch blah.js
       workingDir: ${PROJECTS_ROOT}
