--- a/tests/examples/source/devfiles/nodejs/devfile-with-projects.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-projects.yaml
@@ -5,14 +5,16 @@ projects:
   - name: nodeshift
     clonePath: webapp/
     git:
-      location: "https://github.com/nodeshift/nodeshift"
+      remotes: 
+        origin: "https://github.com/nodeshift/nodeshift"
 starterProjects:
   - name: nodejs-starter
     git:
-      location: "https://github.com/odo-devfiles/nodejs-ex.git"
+      remotes: 
+        origin: "https://github.com/odo-devfiles/nodejs-ex.git"
 components:
-  - container:
-      name: runtime
+  - name: runtime
+    container:
       image: registry.access.redhat.com/ubi8/nodejs-12:1-36
       memoryLimit: 1024Mi
       sourceMapping: apps/
@@ -21,16 +23,16 @@ components:
           targetPort: 3000
       mountSources: true
 commands:
-  - exec:
-      id: devbuild
+  - id: devbuild
+    exec:
       component: runtime
       commandLine: npm install
       workingDir: ${PROJECTS_ROOT}/webapp
       group:
         kind: build
         isDefault: true
-  - exec:
-      id: devrun
+  - id: devrun
+    exec:
       component: runtime
       commandLine: npm start
       workingDir: ${PROJECTS_ROOT}/webapp
