--- a/tests/examples/source/devfiles/springboot/devfile.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile.yaml
@@ -6,18 +6,18 @@ starterProjects:
   - name: springbootproject
     git:
       remotes:
-        origin: "https://github.com/maysunfaisal/springboot.git"
+        origin: "https://github.com/odo-devfiles/springboot-ex.git"
 components:
   - name: tools
     container:
-      image: maysunfaisal/springbootbuild
+      image: quay.io/eclipse/che-java11-maven:nightly
       memoryLimit: 768Mi
       command: ['tail']
       args: [ '-f', '/dev/null']
       mountSources: true
   - name: runtime
     container:
-      image: maysunfaisal/springbootruntime
+      image: quay.io/eclipse/che-java11-maven:nightly
       memoryLimit: 768Mi
       endpoints:
         - name: "8080/tcp"
@@ -25,23 +25,24 @@ components:
       volumeMounts:
         - name: springbootpvc
           path: /data
-      mountSources: false
+      mountSources: true
   - name: springbootpvc
-    volume: {}
+    volume:
+      size: 3Gi
 commands:
   - id: defaultBuild
     exec:
       component: tools
-      commandLine: mvn install
+      commandLine: "mvn clean -Dmaven.repo.local=/data/cache/.m2/repository package -Dmaven.test.skip=true"
       workingDir: /projects
       group:
         kind: build
-        isDefault: true
   - id: defaultRun
     exec:
       component: runtime
-      commandLine: "java -jar target/*.jar"
+      commandLine: "mvn -Dmaven.repo.local=/data/cache/.m2/repository spring-boot:run"
       workingDir: /projects
       group:
         kind: run
         isDefault: true
+
