--- a/tests/examples/source/devfiles/springboot/devfile.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile.yaml
@@ -6,47 +6,46 @@ starterProjects:
   - name: springbootproject
     git:
       remotes:
-        origin: "https://github.com/maysunfaisal/springboot.git"
+        origin: "https://github.com/odo-devfiles/springboot-ex.git"
 components:
   - name: tools
     container:
-      image: maysunfaisal/springbootbuild
+      image: quay.io/eclipse/che-java11-maven:nightly
       memoryLimit: 768Mi
       command: ['tail']
       args: [ '-f', '/dev/null']
+      mountSources: true
       volumeMounts:
         - name: springbootpvc
-          path: /data
-      mountSources: true
+          path: /data/cache/.m2
   - name: runtime
     container:
-      image: maysunfaisal/springbootruntime
+      image: quay.io/eclipse/che-java11-maven:nightly
       memoryLimit: 768Mi
-      command: ['tail']
-      args: [ '-f', '/dev/null']
       endpoints:
         - name: "8080/tcp"
           targetPort: 8080
       volumeMounts:
         - name: springbootpvc
-          path: /data
-      mountSources: false
+          path: /data/cache/.m2
+      mountSources: true
   - name: springbootpvc
-    volume: {}
+    volume:
+      size: 3Gi
 commands:
   - id: defaultBuild
     exec:
       component: tools
-      commandLine: "/artifacts/bin/build-container-full.sh"
+      commandLine: "mvn clean -Dmaven.repo.local=/data/cache/.m2/repository package -Dmaven.test.skip=true"
       workingDir: /projects
       group:
         kind: build
-        isDefault: true
   - id: defaultRun
     exec:
       component: runtime
-      commandLine: "/artifacts/bin/start-server.sh"
-      workingDir: /
+      commandLine: "mvn -Dmaven.repo.local=/data/cache/.m2/repository spring-boot:run"
+      workingDir: /projects
       group:
         kind: run
         isDefault: true
+
