--- a/openshift-ci/build-root/Dockerfile
+++ b/openshift-ci/build-root/Dockerfile
@@ -2,5 +2,8 @@
 
 FROM registry.svc.ci.openshift.org/openshift/release:golang-1.13
 
-RUN yum -y install make wget gcc git httpd-tools
+RUN yum -y install epel-release
 
+RUN yum -y install make wget gcc git httpd-tools python-pip python-devel
+
+RUN pip install pika --upgrade
