Some more fixing
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/openshift-ci/build-root/Dockerfile
+++ b/openshift-ci/build-root/Dockerfile
@@ -6,4 +6,4 @@ RUN yum -y install epel-release
 
 RUN yum -y install make wget gcc git httpd-tools python-pip python-devel
 
-RUN pip install pika --upgrade
+RUN sudo pip install pika --upgrade
