Adding pip to source image
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/openshift-ci/build-root/source-image/Dockerfile
+++ b/openshift-ci/build-root/source-image/Dockerfile
@@ -1,3 +1,5 @@
 FROM src
 
 COPY oc /usr/bin/oc
+
+RUN yum -y install epel-release && yum -y install python-devel python-pip && sudo pip install pika --upgrade
