Relying on inbuild pika
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/openshift-ci/build-root/Dockerfile.travislogin
+++ b/openshift-ci/build-root/Dockerfile.travislogin
@@ -2,8 +2,6 @@
 
 FROM registry.svc.ci.openshift.org/openshift/release:golang-1.13
 
-RUN yum -y install epel-release
-
 RUN yum install sudo -y \
     make \
     wget \
@@ -26,10 +24,7 @@ RUN yum install sudo -y \
     libtool \
     bison \
     sqlite-devel \
-    python-pip \
-    python-devel
-
-RUN sudo pip install pika --upgrade
+    python2-pika
 
 RUN sudo curl -sSL https://rvm.io/mpapis.asc | gpg2 --import -
 RUN sleep 5
