--- a/openshift-ci/build-root/source-image/Dockerfile
+++ b/openshift-ci/build-root/source-image/Dockerfile
@@ -2,4 +2,4 @@ FROM src
 
 COPY oc /usr/bin/oc
 
-RUN yum -y install epel-release && yum -y install python-devel python-pip && sudo pip install pika --upgrade
+RUN yum -y install python2-pika
