--- a/openshift-ci/build-root/Dockerfile
+++ b/openshift-ci/build-root/Dockerfile
@@ -2,8 +2,4 @@
 
 FROM registry.svc.ci.openshift.org/openshift/release:golang-1.13
 
-RUN yum -y install epel-release
-
-RUN yum -y install make wget gcc git httpd-tools python-pip python-devel
-
-RUN sudo pip install pika --upgrade
+RUN yum -y install make wget gcc git httpd-tools python2-pika
