Add PROJECTS_ROOT to unreserved env
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-multiple-projects.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-multiple-projects.yaml
@@ -30,7 +30,7 @@ commands:
     exec:
       component: runtime
       commandLine: npm install
-      workingDir: ${PROJECTS_ROOT}
+      workingDir: ${PROJECTS_ROOT}/webapp
       group:
         kind: build
         isDefault: true
@@ -38,7 +38,7 @@ commands:
     exec:
       component: runtime
       commandLine: npm start
-      workingDir: ${PROJECTS_ROOT}
+      workingDir: ${PROJECT_SOURCE}
       group:
         kind: run
         isDefault: true
