Update PR with feedback
Signed-off-by: Maysun J Faisal <maysunaneek@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-volume-components.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-volume-components.yaml
@@ -21,6 +21,7 @@ components:
       volumeMounts:
         - name: firstvol
           path: /data
+        - name: secondvol
   - name: runtime2
     container:
       image: quay.io/eclipse/che-nodejs10-ubi:nightly
