travisci: run free -m and dmesg after test failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,6 @@ jobs:
       install:
         - make goget-tools
       script:
-        - lsb_release -a
-        - free -m
-        - dmesg
         - export PATH="$PATH:$GOPATH/bin"
         - make bin
         - make validate
@@ -23,6 +20,10 @@ jobs:
       after_success:
         # submit coverage.txt to codecov.io
         - bash <(curl -s https://codecov.io/bash)
+      after_failure:
+        - free -m
+        - dmesg | grep memory
+
       
     # YAML alias, for settings shared across the tests on windows
     - &windows-test
@@ -133,8 +134,6 @@ jobs:
       script:
         - ./scripts/oc-cluster.sh
         - make configure-supported-311-is
-        - free -m
-        - dmesg
         - make bin
         - sudo cp odo /usr/bin
         # Commenting out the docker test target (though test-cmd-docker-devfile-url-pushtarget is not broken)
@@ -198,8 +197,6 @@ jobs:
         - sudo apt-get install -y socat
       script:
         - kubectl cluster-info
-        - free -m
-        - dmesg
         - make bin
         - sudo cp odo /usr/bin
         - export KUBERNETES=true
