add epl-2.0 into license whitelist
Signed-off-by: Stephanie <yangcao@redhat.com>

--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -13,6 +13,7 @@ whitelist:
   - BSD-3-Clause
   - BSD-2-Clause
   - MPL-2.0-no-copyleft-exception
+  - EPL-2.0
 
 exceptions:
   # wwhrd currently does not detect ISC which is compatible with Odo so, add it under exceptions to avoid errors due to it being not recognised
