Adds debug-command flag to odo watch
It takes the custom debug command from the CLI while trigerring odo watch.

Signed-off-by: mik-dass <mrinald7@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-debugrun.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-debugrun.yaml
@@ -40,3 +40,10 @@ commands:
       group:
         kind: debug
         isDefault: true
+  - id: debug
+    exec:
+      component: runtime
+      commandLine: npm run debug
+      workingDir: ${PROJECTS_ROOT}
+      group:
+        kind: debug
