fix devfiles for testing preStart event

--- a/tests/examples/source/devfiles/nodejs/devfile-with-preStart.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-preStart.yaml
@@ -112,6 +112,9 @@ commands:
       group:
         kind: run
 events:
+  preStart:
+    - "myPreStart" 
+    - "preStartComp"
   postStart:
     - "myPostStart" 
     - "secondpoststart"
