--- a/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
+++ b/tests/examples/source/devfiles/springboot/devfile-with-metadataname-foobar.yaml
@@ -32,7 +32,7 @@ components:
   - name: springbootpvc
     volume: {}
 commands:
-  - id: defaultBuild
+  - id: defaultbuild
     exec:
       component: tools
       commandLine: "mvn clean -Dmaven.repo.local=/data/cache/.m2/repository package -Dmaven.test.skip=true"
@@ -40,7 +40,7 @@ commands:
       group:
         kind: build
         isDefault: true
-  - id: defaultRun
+  - id: defaultrun
     exec:
       component: runtime
       commandLine: "mvn -Dmaven.repo.local=/data/cache/.m2/repository spring-boot:run"
