Adding mount sources to multi container devfile
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/tests/examples/source/devfiles/nodejs/devfile-with-multiple-containers.yaml
+++ b/tests/examples/source/devfiles/nodejs/devfile-with-multiple-containers.yaml
@@ -19,6 +19,7 @@ components:
     container:
       image: registry.access.redhat.com/ubi8/nodejs-12:1-36
       memoryLimit: 1024Mi
+      mountSources: true
 commands:
   - id: devbuild
     exec:
